# synosys-styles

./: Makefile  README.md  pyproject.toml
examples/: example_plot.py
scripts/: make_palette_preview.py
src/synosys_styles/: __init__.py  colormaps.py  colors.py  style.py
