[project]
name = "synosys-styles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dirk Brockmannn", email = "brockmann.dirk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cycler>=0.12.1",
    "matplotlib>=3.10.8",
]

[project.scripts]
synosys-styles = "synosys_styles:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
