[project]
name = "synosys-styles"
version = "0.2.0"
description = "Matplotlib styles, fonts, and Wes Anderson-inspired palettes for SynoSys projects."
readme = "README.md"
authors = [
    { name = "Dirk Brockmann", email = "dirk.brockmann@tu-dresden.de" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "cycler>=0.12.1",
    "matplotlib>=3.10.8",
]
keywords = ["matplotlib", "plotting", "styles", "visualization", "palette"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
